[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/limousine/Limousine.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/OrbitalScreen.gd" type="Script" id=2]
[ext_resource path="res://ui/FPSLabel.gd" type="Script" id=3]
[ext_resource path="res://places/SpaceBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/ResizingLabel.gd" type="Script" id=6]
[ext_resource path="res://ui/OrbitalScreenEnvironment.tres" type="Environment" id=7]
[ext_resource path="res://ui/SystemSelector.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/ServiceSelector.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/MainDialog/MainDialogTrigger.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/skins/MainTheme.tres" type="Theme" id=11]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 13
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="OrbitalScreen" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="Viewport" parent="View"]
size = Vector2( 1600, 900 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="View/Port"]
projection = 1
size = 4.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="View/Port"]
environment = ExtResource( 7 )

[node name="SpaceBackground" parent="View/Port" instance=ExtResource( 4 )]
transform = Transform( 0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, -30, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="View/Port"]
transform = Transform( 0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 0, 0, 0 )
light_color = Color( 1, 0.992157, 0.929412, 1 )

[node name="MainDialogTrigger" parent="." instance=ExtResource( 10 )]

[node name="Labels" type="GridContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LocationLabel" type="Label" parent="Labels"]
margin_right = 104.0
margin_bottom = 23.0
size_flags_horizontal = 3
theme = SubResource( 2 )
text = "Planet Name"
align = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSLabel" type="Label" parent="Labels"]
margin_top = 27.0
margin_right = 104.0
margin_bottom = 43.0
size_flags_horizontal = 3
theme = SubResource( 4 )
text = "60 FPS"
align = 2
valign = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SystemSelector" parent="." instance=ExtResource( 8 )]

[node name="ServiceSelector" parent="." instance=ExtResource( 9 )]

[connection signal="jump_complete" from="." to="SystemSelector" method="update_selectability"]
[connection signal="dialog_hidden" from="MainDialogTrigger" to="." method="_on_MainDialogTrigger_dialog_hidden"]
[connection signal="dialog_shown" from="MainDialogTrigger" to="." method="_on_MainDialogTrigger_dialog_shown"]
[connection signal="astral_jump" from="SystemSelector" to="." method="astral_jump"]
[connection signal="deorbit_selected" from="ServiceSelector" to="." method="deorbit"]
[connection signal="service_activated" from="ServiceSelector" to="." method="activate_service"]
